# panoptes

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
agent/: config-windows.alloy  config.alloy  docker-compose.yml  install.ps1  install.sh
configs/alertmanager/: alertmanager.yml
configs/loki/: loki-config.yaml
configs/nginx/: api-keys.yml  api-keys.yml.example  nginx.conf
configs/prometheus/: alert_rules.yml  prometheus.yml
configs/promtail/: promtail-config.yaml
configs/snmp/: snmp.yml
docs/: alert-rules-reference.md  architecture.md  demo-script.md  runbook.md  setup-guide.md
exporters/custom-exporter/: Dockerfile  config.yaml  exporter.py  requirements.txt
exporters/windows/: install-windows-exporter.ps1  install-zabbix-agent.ps1
k8s/: namespace.yml
k8s/alertmanager/: configmap.yml  deployment.yml  pvc.yml  service.yml
k8s/cadvisor/: daemonset.yml
k8s/custom-exporter/: deployment.yml  service.yml
k8s/grafana/: configmap-dashboard-provider.yml  configmap-dashboards.yml  configmap-datasources.yml  deployment.yml  ingress.yml  pvc.yml  service.yml
k8s/ingress/: ingress.yml
k8s/loki/: configmap.yml  service.yml  statefulset.yml
k8s/nginx/: configmap.yml  deployment.yml  service.yml
scripts/: demo.sh  deploy-docker.sh  deploy-k8s.sh  generate-api-key.sh  import-dashboards.sh  setup-vps.sh  test-alerts.sh
tests/: conftest.py  test_alert_rules.py  test_exporter.py  test_integration.py  test_webhook_receiver.py
(+55 files in other folders)
